<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back" >

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvTitleRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/title_form_registro"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edtNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName" >
            <requestFocus />
         </EditText>

        <EditText
            android:id="@+id/edtApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/hint_apellido"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/tipo_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerTipoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/tipos_id"
            android:prompt="@string/tipo_id" />

        <EditText
            android:id="@+id/edtNumeroId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/hint_numero_id"
            android:inputType="number" >
        </EditText>

        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/hint_correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/hint_clave"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvMensajes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/sexo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerTipoSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/tipo_sexo"
            android:prompt="@string/tipo_sexo" />

        <Button
            android:id="@+id/btnFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="#5c89c7"
            android:text="@string/fecha_nacimiento"
            android:textColor="#fff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/hint_direccion"
            android:inputType="text" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/hint_telefono"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tvDepartamentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/departamentos"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerDepartamentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvMunicipios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/municipios"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerMunicipios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin" >

            <CheckBox
                android:id="@+id/checkBoxCondiciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leer_aceptar_condiciones"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvCondiciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condiciones"
                android:textColor="#00e"
                android:textStyle="italic" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/button_custom_registrar"
            android:text="@string/button_register"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>