<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="130dp"
    tools:context=".LoginActivity"
     android:background="@drawable/paciente">

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_input_top_margin"
        android:ems="10"
        android:hint="@string/correo_hint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_input_top_margin"
        android:ems="10"
        android:hint="@string/passwordPlaceholder"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_button_top_margin"
        android:text="@string/ingresarButton" 
        android:background="#5c89c7"
         android:textColor="#ffffff"
        android:textStyle="bold"
        android:textColorLink="@android:color/white"
        android:textSize="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/AppBaseTheme"/>

    <TextView
        android:id="@+id/textRecuperarCuenta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/olvidarClaveText" 
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/tvRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/login_registrarse" 
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="#ffffff" />

</LinearLayout>
